# colby

./: .travis.yml  CMakeLists.txt  Doxyfile  doxyfile.in
cmake/modules/: FindOpenCV3.cmake
include/colby/: algorithm.hpp  color_by_numbers.hpp  conversions.hpp  hash.hpp  image_factory.hpp  optional.hpp  sp3000_color_by_numbers.hpp  sp3000_color_by_numbers_observer.hpp  timer.hpp
sphinx/: conf.py  index.rst
src/: CMakeLists.txt  main.cpp
src/colby/: CMakeLists.txt  color_by_numbers.cpp  image_factory.cpp  sp3000_color_by_numbers.cpp  sp3000_color_by_numbers_observer.cpp
src/colby/test/: CMakeLists.txt  algorithm.cpp  conversions.cpp  hash.cpp
